solved problems with isBlanck method in NewMailView